--- a/i3wm/ja/etc/skel/.config/i3/config
+++ b/i3wm/ja/etc/skel/.config/i3/config
@@ -58,6 +58,9 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 # Launch cbatticon
 exec_always --no-startup-id cbatticon
 
+# Launch Volume Icon
+exec_always --no-startup-id volumeicon
+
 # Launch clipman
 exec_always --no-startup-id xfce4-clipman
 
@@ -78,9 +81,6 @@ exec_always --no-startup-id dunst
 
 # Launch Fcitx5
 exec_always --no-startup-id fcitx5
-
-# Launch volumeicon
-exec_always --no-startup-id volumeicon
 
 # Open shortcuts list
 bindsym $mod+c exec --no-startup-id xdg-open ~/.config/i3/shortcuts.list
