--- a/i3wm/etc/skel/.config/i3/config
+++ b/i3wm/etc/skel/.config/i3/config
@@ -26,7 +26,10 @@ font pango:IPAexGothic 15
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
-# start a terminal. We use LXTerm.
+# Start Installer.
+bindsym $mod+i exec sudo -E calamares
+
+# start a terminal. We use Xfce Terminal.
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym Mod1+Control+t exec i3-sensible-terminal
 
@@ -74,7 +77,7 @@ exec_always --no-startup-id dunst
 exec_always --no-startup-id fcitx5
 
 # Launch Volume Icon
-exec_always volumeicon
+exec_always --no-startup-id volumeicon
 
 # Open shortcuts list
 bindsym $mod+c exec --no-startup-id xdg-open ~/.config/i3/shortcuts.list
