--- a/trinity/etc/skel/.config/autostart/xcape-super-key.desktop
+++ b/trinity/etc/skel/.config/autostart/xcape-super-key.desktop
@@ -4,7 +4,7 @@ Version=0.9.4
 Type=Application
 Name=xcape-super-key
 Comment=
-Exec=xcape -e 'Super_L=Control_L|Escape'
+Exec=xcape -e 'Super_L=Alt_L|F1'
 RunHook=0
 StartupNotify=false
 Terminal=false
